# robot_base

./: .gitignore  LICENSE  README.md
hoverboard_hardware_interface/: CMakeLists.txt
hoverboard_hardware_interface/include/hoverboard_hardware_interface/: back_serial_port_protocol.hpp  front_serial_port_protocol.hpp  hoverboard_hardware_interface.hpp  motor_wheel_back.hpp  motor_wheel_front.hpp  serial_port_service.hpp  serial_port_service_back.hpp  serial_port_service_front.hpp
hoverboard_hardware_interface/src/: hoverboard_hardware_interface.cpp  serial_port_service_back.cpp  serial_port_service_front.cpp
hoverboard_ros2_control/hoverboard_demo_bringup/config/: hoverboard_controllers.yaml  mapper_params_online_async.yaml
robot_base_description/: CMakeLists.txt  package.xml
robot_base_description/config/: hoverboard_controllers.yaml  rviz_default.rviz
robot_base_description/launch/: display.launch.py  gazebo.launch.py  gz-sim.launch.py  rviz.launch.py
robot_base_description/meshes/: base_link.stl  camera_1.stl  imu.stl  imu_1.stl  left_back_wheel_1.stl  left_front_wheel.stl  left_front_wheel_1.stl  left_plate.stl  lidar.stl  lidar_1.stl  logo.stl  logo1.stl  logo2.stl  right_back_wheel.stl  right_back_wheel_1.stl  right_front_wheel.stl  right_front_wheel_1.stl  right_plate.stl  top_cover.stl  zed_mini.stl
robot_base_description/rviz/: rviz_default.rviz
robot_base_description/urdf/: materials.xacro  robot_base.gazebo  robot_base.trans  robot_base.xacro  ros2_control.xacro
robot_base_description/worlds/: empty.sdf  empty_world.sdf
(+10 files in other folders)
